Changed names to generic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="container clearfix">
 			<div class="sidebar clearfix">
-				<h3>Anil Maharjan</h3>
+				<h3>John Doe</h3>
 				<div class="sidebar-list">
 					<ul>
 						<li class="clearfix" class="inbox"><a class="main-link" href=""><i class="fa fa-envelope"></i></a>
@@ -41,9 +41,9 @@
 				</div>
 				<div class="footer-user-info">
 					<ul>
-						<li>Anil Maharjan</li> 
+						<li>John Doe</li> 
 						<li>Gmail</li>
-						<li>Itonics</li>
+						<li>Office</li>
 					</ul>
 				</div>
 			</div>
@@ -234,14 +234,14 @@
 			<div class="message-content">
 				<div class="esewa-bill-payment">
 					<div class="esewa">eSEWA</div>
-					<div class="esewa-user">To Anil Maharjan</div>
+					<div class="esewa-user">To John Doe</div>
 					<div class="esewa-payment">
 						eSEWA BILL PAYMENT
 					</div>
 				</div>
 				<div class="esewa-form clearfix">
 					<h2>esewa transaction Notification</h2>
-					<div class="user-eaml">Dear anil@animaharjan.com.np,</div>
+					<div class="user-eaml">Dear John@aniDoe.com.np,</div>
 					<div class="user-info-left">
 						<p>Merchant Name :</p>
 						<p>Transaction Code :</p>
